--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -11,6 +11,7 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
+data = read.csv('GSScsv.csv')
 
 ```
 
@@ -20,11 +21,16 @@ require(tigerstats)
 
 The data is in the file GSScsv.csv and came from the 2018 General Social Survey.  The question to answer is to resolve this hypothesis.  
 $H_0$ There is no difference between the average score on the WORDSUM test and level of schooling DEGREE  
-$H_a$ There is a significant difference in average score on the WORDSUM test between at least two levels of DEGREE  
+$H_a$ There is a significant difference in average score on the WORDSUM test between at least two levels 
+of DEGREE  
 
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
+
+We try to predict WORDSUM based on DEGREE.
+
+WORDSUM is numerical, DEGREE is categorical 
 
 # Results
 
